# solidspec

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  ROADMAP.md
.cargo/: audit.toml
.github/: copilot-instructions.md  dependabot.yml
.github/agents/: rustyspec-analyze.agent.md  rustyspec-checklist.agent.md  rustyspec-clarify.agent.md  rustyspec-implement.agent.md  rustyspec-plan.agent.md  rustyspec-review.agent.md  rustyspec-specify.agent.md  rustyspec-tasks.agent.md  rustyspec-tests.agent.md  solidspec-analyze.agent.md  solidspec-checklist.agent.md  solidspec-clarify.agent.md  solidspec-implement.agent.md  solidspec-plan.agent.md  solidspec-review.agent.md  solidspec-specify.agent.md  solidspec-tasks.agent.md  solidspec-tests.agent.md
.github/prompts/: rustyspec-analyze.prompt.md  rustyspec-checklist.prompt.md  rustyspec-clarify.prompt.md  rustyspec-implement.prompt.md  rustyspec-plan.prompt.md  rustyspec-review.prompt.md  rustyspec-specify.prompt.md  rustyspec-tasks.prompt.md  rustyspec-tests.prompt.md  solidspec-analyze.prompt.md  solidspec-checklist.prompt.md  solidspec-clarify.prompt.md  solidspec-implement.prompt.md  solidspec-plan.prompt.md  solidspec-review.prompt.md  solidspec-specify.prompt.md  solidspec-tasks.prompt.md  solidspec-tests.prompt.md
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  KILLER_FEATURE_IDEAS.md  Parallel-Fan-out_orchestration-plan.md  ai-tdd-implementation-plan.md  apex-implementation-plan.md  architecture.puml  feature-shell-scripts.md  idsd-workflow-guide.md  improvment-plan-solid-spec.md  multi-agent-pipeline.md  solid-specification.md  spec-to-test-generation.md
schemas/apex-driven/: schema.yaml
schemas/intent-apex/: schema.yaml
schemas/intent-driven/: schema.yaml
schemas/minimal/: schema.yaml
schemas/security-first/: schema.yaml
schemas/spec-driven/: schema.yaml
schemas/tdd-driven/: schema.yaml
scripts/bash/: check-prerequisites.sh  common.sh  update-agent-context.sh
scripts/powershell/: common.ps1  (+2 more)
templates/: agent-file-template.md  intent-template.md
tests/: apex.rs  change.rs  check.rs  completions.rs  evidence.rs  pipeline.rs  ship.rs  status.rs  tdd.rs  traceability.rs
(+91 files in other folders)
