[package]
name = "solidspec"
version = "0.3.0"
edition = "2024"
description = "A CLI tool for Specification-Driven Development (SDD)"
license = "MIT"

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }
clap_complete = "4"

# Configuration
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "0.8"
semver = "1"

# Templates
tera = "1"

# Git integration
git2 = "0.21"

# Regex
regex = "1"

# Error handling
thiserror = "2"
anyhow = "1"

# Logging
log = "0.4"
env_logger = "0.11"

# Terminal UI
console = "0.15"

# CLI detection
which = "7"

# Time
chrono = "0.4"

[lints.rust]
future-incompatible = { level = "warn", priority = -1 }
nonstandard_style = { level = "deny", priority = -2 }

[lints.clippy]
redundant_clone = { level = "deny", priority = 9 }
needless_collect = "warn"
large_enum_variant = "warn"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
